# python3-saml

./: .coveralls.yml  .flake8  .gitignore  .travis.yml  LICENSE  MANIFEST.in  Makefile  README  README.md  README.rst  changelog.md  example.cfg  example.py  pyproject.toml  requirements-test.txt  requirements.txt  seg_wrapper.sh  setup.cfg  setup.py
.github/workflows/: python-package.yml
demo-django/: requirements.txt
demo-django/demo/: settings.py  urls.py  views.py  wsgi.py
demo-django/saml/: advanced_settings.json  settings.json
demo-django/saml/certs/: README
demo-django/templates/: attrs.html  index.html
demo-flask/: index.py
demo-flask/saml/: advanced_settings.json  settings.json  settings.json.old
demo-flask/saml/certs/: README
demo-flask/templates/: attrs.html  base.html  index.html
demo-tornado/: README.md  README.txt  Settings.py  requirements.txt  views.py
demo-tornado/Docs/: DEVELOPING.md
demo-tornado/saml/: advanced_settings.json  settings (seconda copia).json  settings.json
demo-tornado/templates/: attrs.html  base.html  index.html
demo_pyramid/: .coveragerc  MANIFEST.in  README.txt  development.ini  production.ini  pytest.ini  setup.py
demo_pyramid/demo_pyramid/: __init__.py  tests.py  views.py
demo_pyramid/demo_pyramid/saml/: advanced_settings.json
demo_pyramid/demo_pyramid/saml/certs/: README
demo_pyramid/demo_pyramid/templates/: attrs.jinja2  index.jinja2  layout.jinja2
docs/saml2/: .buildinfo  genindex.html  index.html  modules.html  objects.inv  onelogin.html  onelogin.saml2.html  py-modindex.html  saml2.html  search.html  searchindex.js
docs/saml2/_modules/: index.html
docs/saml2/_modules/saml2/: auth.html  authn_request.html  constants.html  errors.html  logout_request.html  logout_response.html  metadata.html  response.html  settings.html  utils.html
docs/saml2/_sources/: index.rst.txt  index.txt  modules.rst.txt  onelogin.rst.txt  onelogin.saml2.rst.txt  saml2.txt
docs/saml2/_static/: doctools.js  documentation_options.js  jquery.js  pygments.css  searchtools.js  underscore.js  websupport.js
onelogin/saml/: AuthRequest.py  Response.py  SignatureVerifier.py  Utils.py  __init__.py
onelogin/saml/test/: TestAuthRequest.py  TestResponse.py  TestSignatureVerifier.py  util.py
saml2/: auth.py  authn_request.py  compat.py  constants.py  errors.py  idp_metadata_parser.py  logout_request.py  logout_response.py  metadata.py  response.py  settings.py  utils.py  xml_templates.py  xml_utils.py  xmlparser.py
src/onelogin/: __init__.py
src/onelogin/saml2/: __init__.py  artifact_resolve.py  artifact_response.py  auth.py  authn_request.py  compat.py  constants.py  errors.py  idp_metadata_parser.py  logout_request.py  logout_response.py  metadata.py  response.py  settings.py  utils.py  xml_templates.py  xml_utils.py  xmlparser.py
src/onelogin/saml2/schemas/: access_control-xacml-2.0-context-schema-os.xsd  access_control-xacml-2.0-policy-schema-os.xsd  access_control-xacml-2.0-saml-assertion-schema-os.xsd  access_control-xacml-2.0-saml-protocol-schema-os.xsd  sstc-saml-schema-assertion-2.0.xsd  sstc-saml-schema-protocol-2.0.xsd
tests/: auth_test.py  authn_request_test.py  coverage.rc  error_test.py  idp_metadata_parser_test.py  logout_request_test.py  logout_response_test.py  metadata_test.py  pep8.rc  pylint.rc  response_test.py  settings_test.py  signed_response_test.py  utils_test.py  xml_utils_test.py
tests/data/artifact_response/: artifact_response_invalid.xml
tests/data/customPath/: advanced_settings.json  settings.json
tests/data/customPath/certs/: Test_Root_CA.crt  idp.crt
tests/data/logout_requests/: logout_request_with_encoding.xml
tests/data/logout_requests/invalids/: invalid_issuer.xml  invalid_issuer.xml.base64  no_nameId.xml
tests/data/logout_responses/: logout_response_with_encoding.xml  logout_response_with_encoding_deflated.xml.base64
tests/data/metadata/: entities_metadata.xml  idp_metadata.xml  idp_metadata_different_sign_and_encrypt_cert.xml  idp_metadata_same_sign_and_encrypt_cert.xml  idp_multiple_descriptors.xml  metadata_settings1.xml  no_expiration_mark_metadata.xml  signed_metadata_settings2.xml  testshib-providers.xml
tests/data/misc/: sp4.key
tests/data/responses/: decrypted_valid_encrypted_assertion.xml  double_signed_encrypted_assertion2.xml.base64  double_signed_response2.xml.base64  expired_response.xml.base64  no_audience.xml.base64  pretty_decrypted_valid_encrypted_assertion.xml  pretty_signed_message_response.xml  response1_with_duplicate_attributes.xml.base64  response1_with_duplicate_friendlynames.xml.base64  response1_with_friendlyname.xml.base64  response_encrypted_nameid.xml.base64  response_with_empty_assertion_reference_uri.xml.base64  response_with_nested_nameid_values.xml.base64  response_without_assertion_reference_uri.xml.base64  response_without_reference_uri.xml.base64  signed_assertion_response.xml.base64  signed_assertion_response2.xml.base64  signed_encrypted_assertion2.xml.base64  signed_message_encrypted_assertion2.xml.base64  signed_message_response.xml.base64  signed_message_response2.xml.base64  unsigned_response.xml.base64  unsigned_response_with_miliseconds.xm.base64  valid_encrypted_assertion_encrypted_nameid.xml.base64  valid_response.xml.base64  valid_response2.xml.base64  valid_response_with_namequalifier.xml.base64  valid_response_with_unsigned_assertion.xml.base64  valid_response_without_inresponseto.xml.base64  valid_unsigned_response.xml
tests/data/responses/invalids/: empty_destination.xml.base64  empty_nameid.xml.base64  encrypted_attrs.xml.base64  invalid_audience.xml.base64  invalid_issuer_assertion.xml.base64  invalid_issuer_message.xml.base64  invalid_sessionindex.xml.base64  invalid_subjectconfirmation_inresponse.xml.base64  invalid_subjectconfirmation_nb.xml.base64  invalid_subjectconfirmation_noa.xml.base64  (+9 more)
tests/settings/: settings.json  settings1.json  settings10.json  settings11.json  settings2.json  settings3.json  settings4.json  settings5.json  settings6.json  settings7.json  settings8.json  settings9.json
(+28 files in other folders)
